# fingerprint-jetson-nano

./: .env.example  .gitignore  README.md  cli.py  flow.md  pyproject.toml  requirements-onnx.txt  requirements.txt  setup.py
app/: __init__.py  main.py
app/api/: __init__.py  pydantic_compat.py  schemas.py
app/core/: __init__.py  config.py  lifespan.py  metrics_collector.py
app/database/: __init__.py  crypto.py  database.py  models.py  repository.py
app/drivers/: __init__.py  sensor.py
app/mqtt/: __init__.py  client.py  handlers.py  payloads.py
app/pipeline/: __init__.py  faiss_index.py  graph_builder.py  inference_engine.py  minutiae_extractor.py  pipeline.py  preprocessing.py  profiler.py
app/services/: __init__.py  model_service.py  pipeline_service.py  sensor_service.py  system_service.py  task_service.py
cli/: main.py
config/: default.yaml
data/: mdgt_edge.db
data/backups/: backup_20260325_163733.db
gui/: __init__.py  __main__.py  api_client.py  main_window.py  styles.py  ui_helpers.py
gui/widgets/: fingerprint_preview.py  fingerprint_stream.py  register_panel.py  verify_panel.py  worker_info.py
mdgt_edge/: __init__.py  app.py
mdgt_edge/database/: __init__.py  crypto.py  database.py  models.py  repository.py
mdgt_edge/pipeline/: __init__.py  faiss_index.py  graph_builder.py  inference_engine.py  minutiae_extractor.py  pipeline.py
mdgt_edge/sensor/: __init__.py  base.py
scripts/: run_gui.sh  setup_jetson.sh  setup_jetson_env.sh
tools/: benchmark.py  convert_trt.py  extract_embeddings.py  import_fvc.py  init_db.py
(+44 files in other folders)
